EPBDS-15767 Migrate source code to Java 21