@@ -3,6 +3,8 @@
  */
 package org.openl.binding.impl;
 
+import java.io.Serial;
+
 import org.openl.syntax.ISyntaxNode;
 import org.openl.syntax.exception.SyntaxNodeException;
 import org.openl.types.IOpenClass;
@@ -12,13 +14,14 @@ import org.openl.types.IOpenClass;
  */
 public class TypeCastException extends SyntaxNodeException {
 
+    @Serial
     private static final long serialVersionUID = 5570752529258476343L;
 
     private final IOpenClass from;
     private final IOpenClass to;
 
     public TypeCastException(ISyntaxNode node, IOpenClass from, IOpenClass to) {
-        super(String.format("Cannot convert from '%s' to '%s'.", from.getName(), to.getName()), null, node);
+        super("Cannot convert from '%s' to '%s'.".formatted(from.getName(), to.getName()), null, node);
 
         this.from = from;
         this.to = to;
