@@ -23,7 +23,7 @@ final class ArrayCast implements IOpenCast {
         Class<?> toClass = toComponentType.getInstanceClass();
         if (!fromClass.isArray()) {
             throw new ClassCastException(
-                    String.format("Cannot cast '%s' to '%s'.", fromClass.getTypeName(), toClass.getTypeName()));
+                    "Cannot cast '%s' to '%s'.".formatted(fromClass.getTypeName(), toClass.getTypeName()));
         }
         int length = Array.getLength(from);
         Object convertedArray = Array.newInstance(toClass, length);
