@@ -23,6 +23,6 @@ public enum OriginsEnum {
             }
         }
 
-        throw new IllegalArgumentException(String.format("No constant with displayName '%s' is found.", displayName));
+        throw new IllegalArgumentException("No constant with displayName '%s' is found.".formatted(displayName));
     }
 }
