@@ -77,6 +77,6 @@ public enum UsStatesEnum {
             }
         }
 
-        throw new IllegalArgumentException(String.format("No constant with displayName '%s' is found.", displayName));
+        throw new IllegalArgumentException("No constant with displayName '%s' is found.".formatted(displayName));
     }
 }
