@@ -1,7 +1,7 @@
 package org.openl.excel.parser;
 
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public final class FolderUtils {
     private FolderUtils() {
@@ -13,7 +13,7 @@ public final class FolderUtils {
 
         if (!new File(folder).exists()) {
             // If run jar from the "/target" folder
-            String parent = Paths.get("..").toAbsolutePath().normalize().toString();
+            String parent = Path.of("..").toAbsolutePath().normalize().toString();
             folder = parent + "/" + folder;
         }
         if (!new File(folder).exists()) {
