@@ -17,7 +17,6 @@ import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.HashMap;
@@ -221,7 +220,7 @@ class HttpData {
                     var expectedBody = new String(expected.body, StandardCharsets.ISO_8859_1).trim();
                     if (!expectedBody.trim().equals("***")) {
                         if (isFileRef(expectedBody)) {
-                            String fileRes = resolveFileRef(Paths.get(expected.pathToResource).getParent(), expectedBody);
+                            String fileRes = resolveFileRef(Path.of(expected.pathToResource).getParent(), expectedBody);
                             try (InputStream fileStream = getStream(fileRes)) {
                                 if (fileStream == null) {
                                     throw new FileNotFoundException(fileRes);
@@ -268,7 +267,7 @@ class HttpData {
             System.err.println("\n--------------------");
 
             String path = System.getProperty("server.responses") + resourceName + ".body";
-            Path responsePath = Paths.get(path);
+            Path responsePath = Path.of(path);
             Files.createDirectories(responsePath.getParent());
             Files.write(responsePath, body);
         } catch (IOException ignored) {
@@ -316,7 +315,7 @@ class HttpData {
                     String line = readLine(input);
                     if (isFileRef(line)) {
                         writer.flush();
-                        String fileRes = resolveFileRef(Paths.get(resource).getParent(), line);
+                        String fileRes = resolveFileRef(Path.of(resource).getParent(), line);
                         try (InputStream fileStream = getStream(fileRes)) {
                             if (fileStream == null) {
                                 throw new FileNotFoundException(fileRes);
@@ -339,7 +338,7 @@ class HttpData {
         } else if (BLOB_TYPES.contains(ct) || ce != null) {
             String line = readLine(input);
             if (isFileRef(line)) {
-                String fileRes = resolveFileRef(Paths.get(resource).getParent(), line);
+                String fileRes = resolveFileRef(Path.of(resource).getParent(), line);
                 try (InputStream fileStream = getStream(fileRes)) {
                     if (fileStream == null) {
                         throw new FileNotFoundException(fileRes);
@@ -369,7 +368,7 @@ class HttpData {
 
     private static InputStream getStream(String fileRes) {
         try {
-            return Files.newInputStream(Paths.get(fileRes));
+            return Files.newInputStream(Path.of(fileRes));
         } catch (IOException e) {
             return HttpData.class.getResourceAsStream(fileRes);
         }
