@@ -246,7 +246,7 @@ public class ProjectBean {
 
         if (!studio.getCurrentProjectDescriptor().getName().equals(name)) {
             WebStudioUtils.validate(NameChecker.checkName(name), NameChecker.BAD_PROJECT_NAME_MSG);
-            WebStudioUtils.validate(!NameChecker.isReservedName(name), String.format("'%s' is a reserved word.", name));
+            WebStudioUtils.validate(!NameChecker.isReservedName(name), "'%s' is a reserved word.".formatted(name));
             WebStudioUtils.validate(!studio.isProjectExists(name), "Project with such name already exists");
         }
     }
@@ -394,7 +394,7 @@ public class ProjectBean {
         try {
             NameChecker.validatePath(path);
         } catch (IOException e) {
-            WebStudioUtils.throwValidationError(String.format("Invalid path \"%s\". %s", path, e.getMessage()));
+            WebStudioUtils.throwValidationError("Invalid path \"%s\". %s".formatted(path, e.getMessage()));
         }
         Path moduleFile = studio.getCurrentProjectDescriptor().getProjectFolder().resolve(path);
         WebStudioUtils.validate(!Files.exists(moduleFile), "File with such name already exists");
@@ -429,7 +429,7 @@ public class ProjectBean {
         try {
             NameChecker.validatePath(path);
         } catch (IOException e) {
-            WebStudioUtils.throwValidationError(String.format("Invalid path \"%s\". %s", path, e.getMessage()));
+            WebStudioUtils.throwValidationError("Invalid path \"%s\". %s".formatted(path, e.getMessage()));
         }
         String fileName = FileUtils.getBaseName(path);
         WebStudioUtils.validate(NameChecker.checkName(fileName),
@@ -669,7 +669,7 @@ public class ProjectBean {
             AProjectResource newProjectResource = currentProject.addResource(path, oldProjectResource.getContent());
             if (!designRepositoryAclService.hasAcl(newProjectResource) && !designRepositoryAclService
                     .createAcl(newProjectResource, List.of(AclRole.CONTRIBUTOR.getCumulativePermission()), true)) {
-                String message = String.format("Granting permissions to a new file '%s' is failed.",
+                String message = "Granting permissions to a new file '%s' is failed.".formatted(
                         ProjectArtifactUtils.extractResourceName(newProjectResource));
                 WebStudioUtils.addErrorMessage(message);
             }
@@ -771,7 +771,7 @@ public class ProjectBean {
         try {
             AProjectArtefact projectArtefact = currentProject.getArtefact(module.getRulesRootPath().getPath());
             if (!designRepositoryAclService.isGranted(projectArtefact, true, BasePermission.DELETE)) {
-                throw new Message(String.format("There is no permission for deleting '%s' file.",
+                throw new Message("There is no permission for deleting '%s' file.".formatted(
                         ProjectArtifactUtils.extractResourceName(projectArtefact)));
             }
         } catch (ProjectException ignored) {
@@ -783,7 +783,7 @@ public class ProjectBean {
             AProjectArtefact projectArtefact = currentProject.getArtefact(module.getRulesRootPath().getPath());
             projectArtefact.delete();
         } catch (ProjectException e) {
-            throw new Message(String.format("Cannot delete '%s' module.", module.getName()), e);
+            throw new Message("Cannot delete '%s' module.".formatted(module.getName()), e);
         }
     }
 
@@ -999,7 +999,7 @@ public class ProjectBean {
         studio.init(currentProject.getDesignRepository().getId(),
                 currentProject.getBranch(),
                 currentProject.getName(),
-                modules.iterator().next().getName());
+                modules.getFirst().getName());
         org.openl.rules.ui.ProjectModel projectModel = studio.getModel();
         while (!isCompilationCompleted(projectModel)) {
             try {
@@ -1013,15 +1013,14 @@ public class ProjectBean {
         final boolean update = existedOpenAPIFilePath != null;
         CompiledOpenClass compiledOpenClass = projectModel.getCompiledOpenClass();
         final boolean hasCompilationErrors;
-        if (compiledOpenClass instanceof ValidatedCompiledOpenClass) {
-            ValidatedCompiledOpenClass validated = (ValidatedCompiledOpenClass) compiledOpenClass;
+        if (compiledOpenClass instanceof ValidatedCompiledOpenClass validated) {
             hasCompilationErrors = validated.hasErrors() && !validated.hasOnlyValidationErrors();
         } else {
             hasCompilationErrors = compiledOpenClass.hasErrors();
         }
         if (hasCompilationErrors) {
             throw new Message(
-                    String.format("Cannot %s OpenAPI file. Project has compilation error.", update ? "update" : "create"));
+                    "Cannot %s OpenAPI file. Project has compilation error.".formatted(update ? "update" : "create"));
         }
 
         tryLockProject();
@@ -1044,7 +1043,7 @@ public class ProjectBean {
                     AProjectArtefact projectArtefact = currentProject.getArtefact(openAPIType.getDefaultFileName());
                     if (!designRepositoryAclService.hasAcl(projectArtefact) && !designRepositoryAclService
                             .createAcl(projectArtefact, List.of(AclRole.CONTRIBUTOR.getCumulativePermission()), true)) {
-                        String message = String.format("Granting permissions to a new file '%s' is failed.",
+                        String message = "Granting permissions to a new file '%s' is failed.".formatted(
                                 ProjectArtifactUtils.extractResourceName(projectArtefact));
                         WebStudioUtils.addErrorMessage(message);
                     }
@@ -1069,7 +1068,7 @@ public class ProjectBean {
             throw e;
         } catch (Exception e) {
             throw new Message(
-                    String.format("Failed to %s OpenAPI file. Check compilation.", update ? "update" : "create"),
+                    "Failed to %s OpenAPI file. Check compilation.".formatted(update ? "update" : "create"),
                     e);
         } finally {
             if (!currentProject.isModified()) {
@@ -1254,7 +1253,7 @@ public class ProjectBean {
 
     private void validatePermissionForEditing(AProjectArtefact artefact) {
         if (!designRepositoryAclService.isGranted(artefact, List.of(BasePermission.WRITE))) {
-            throw new Message(String.format("There is no permission for modifying '%s' file.",
+            throw new Message("There is no permission for modifying '%s' file.".formatted(
                     ProjectArtifactUtils.extractResourceName(artefact)));
         }
     }
@@ -1263,7 +1262,7 @@ public class ProjectBean {
         String p = designRepositoryAclService.getPath(currentProject);
         if (!designRepositoryAclService
                 .isGranted(currentProject.getRepository().getId(), p + "/" + path, List.of(BasePermission.CREATE))) {
-            throw new Message(String.format("There is no permission for creating '%s/%s' file.",
+            throw new Message("There is no permission for creating '%s/%s' file.".formatted(
                     ProjectArtifactUtils.extractResourceName(currentProject),
                     path));
         }
@@ -1300,7 +1299,7 @@ public class ProjectBean {
                             "/"));
         } catch (ProjectException e) {
             throw new Message(
-                    String.format("Failed to remove previously generated file for project %s.", currentProject.getName()));
+                    "Failed to remove previously generated file for project %s.".formatted(currentProject.getName()));
         }
     }
 
@@ -1396,7 +1395,7 @@ public class ProjectBean {
         }
         if (artefact != null) {
             if (!designRepositoryAclService.isGranted(artefact, true, BasePermission.DELETE)) {
-                throw new Message(String.format("There is no permission for deleting '%s' file.",
+                throw new Message("There is no permission for deleting '%s' file.".formatted(
                         ProjectArtifactUtils.extractResourceName(artefact)));
             }
             try {
@@ -1492,7 +1491,7 @@ public class ProjectBean {
                         .getArtefact(ProjectDescriptorBasedResolvingStrategy.PROJECT_DESCRIPTOR_FILE_NAME);
                 if (!designRepositoryAclService.hasAcl(projectArtefact) && !designRepositoryAclService
                         .createAcl(projectArtefact, List.of(AclRole.CONTRIBUTOR.getCumulativePermission()), true)) {
-                    String message = String.format("Granting permissions to a new file '%s' is failed.",
+                    String message = "Granting permissions to a new file '%s' is failed.".formatted(
                             ProjectArtifactUtils.extractResourceName(projectArtefact));
                     WebStudioUtils.addErrorMessage(message);
                 }
